# opt4imu

./: CMakeLists.txt  README.md
include/: geom3d.hpp  graph_gn.hpp  graph_gn_lin3.hpp  graph_gn_se3.hpp  graph_gn_so3.hpp  graph_gn_so3_general.hpp  imu.hpp  imulog.hpp  imutrj_optimizer.hpp  msg_header.hpp
src/: attopt.cpp  dual_foot_mounted_test.cpp  foot_mounted_test.cpp  imutrj_optimizer.cpp  monocam_loop_closure_test.cpp  pointcloud_registration_test.cpp  posopt.cpp  se3test.cpp  test_registration.cpp
test/data/: 20190801T142342_take1_corrected.imu  loop_indices_cam_0.98.txt  reference_0801.txt
